fix mobile menu z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -63,6 +63,7 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
+  z-index: 999;
 }
 
 .close_mobile {
